--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Resume | Alex</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>Alex's Resume</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="about.html">About Me</a>
+      <a href="game.html">Game</a>
+    </nav>
+  </header>
 
+  <main>
+    <section class="intro">
+      <h2>Summary</h2>
+      <p>Confident, analytical, and supportive computer science student at UConn with a passion for creative technology, ethical AI, and immersive media. Strong communicator, proactive leader, and strategic problem-solver.</p>
+    </section>
+
+    <section class="skills">
+      <h2>Technical Skills</h2>
+      <ul>
+        <li>Python (clean I/O, OOP, debugging)</li>
+        <li>Three.js & Blender (3D web experiences)</li>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Git, VS Code, Figma</li>
+        <li>Collaborative debugging & code review</li>
+      </ul>
+    </section>
+
+    <section class="experience">
+      <h2>Experience</h2>
+      <p><strong>Creative Technologist (Personal Projects)</strong><br />
+      Designed interactive portfolio with cinematic transitions and modular routing using Three.js and Blender.</p>
+
+      <p><strong>Mentor & Organizer (UConn)</strong><br />
+      Led peer study groups, optimized collaborative workflows, and advised incoming students on course strategy and tech ethics.</p>
+    </section>
+
+    <section class="education">
+      <h2>Education</h2>
+      <p><strong>University of Connecticut</strong><br />
+      B.S. in Computer Science (in progress)<br />
+      Relevant coursework: CSE 1010, Calculus II, Robotics</p>
+    </section>
+
+    <section class="download">
+      <h2>Download</h2>
+      <p><a href="Alex_Resume.pdf" download>Download PDF Version</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Alex | Built with curiosity and code</p>
+  </footer>
+</body>
+</html>
