--- a/resume.html
+++ b/resume.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resume | Alex</title>
+  <title>Resume | Alexander Gau</title>
   <link rel="stylesheet" href="resume_style.css" />
 </head>
 <body>
   <header>
-    <h1>Alex's Resume</h1>
+    <h1>Alexander Gau</h1>
+    <p>Rocky Hill, CT · 860-839-4425 · <a href="mailto:alexandergau07@gmail.com">alexandergau07@gmail.com</a> · <a href="https://www.linkedin.com/in/alexandergau/" target="_blank">LinkedIn</a></p>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -18,46 +19,101 @@
   </header>
 
   <main>
-    <section class="intro">
-      <h2>Summary</h2>
-      <p>Confident, analytical, and supportive computer science student at UConn with a passion for creative technology, ethical AI, and immersive media. Strong communicator, proactive leader, and strategic problem-solver.</p>
+    <section>
+      <h2>Education</h2>
+      <h3>University of Connecticut</h3>
+      <p>Bachelor of Computer Science and Engineering<br />
+      Graduation: May 2029 · GPA: 3.45</p>
+      <p><strong>Related Coursework:</strong> Introduction to Python, Calculus II, Physics for Engineers</p>
+
+      <h3>Rocky Hill High School, CT</h3>
+      <p>High School Diploma · Graduation: June 2025 · GPA: 3.98</p>
+      <p><strong>Honors:</strong> National Honor Society, CCC All-Academic Team, AP Scholar with Distinction, Elmira College Book Award, Academic High Honor Roll, French National Honor Society, CIAC Class M & SS Team State Champions</p>
+      <p><strong>Related Coursework:</strong> AP Calculus I, UConn Discrete Math, AP Statistics, UConn Physics I, UConn Chem I & II, AP Computer Science Principles</p>
     </section>
 
-    <section class="skills">
-      <h2>Technical Skills</h2>
+    <section>
+      <h2>Employment Experience</h2>
+      <h3>Tennis Specialist · Logan Gauvin, Rocky Hill, CT</h3>
+      <p>June 2025 – Present</p>
       <ul>
-        <li>Python (clean I/O, OOP, debugging)</li>
-        <li>Three.js & Blender (3D web experiences)</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Git, VS Code, Figma</li>
-        <li>Collaborative debugging & code review</li>
+        <li>Teach tennis to children ages 4–13, 8 hours daily</li>
+        <li>Develop lesson plans and manage tennis facilities</li>
+        <li>Communicate with camp directors and guardians</li>
+      </ul>
+
+      <h3>Camp Counselor · Logan Gauvin, Rocky Hill, CT</h3>
+      <p>June 2023 – September 2024</p>
+      <ul>
+        <li>Led groups of 20–30 campers ages 4–10</li>
+        <li>Developed problem-solving skills through daily challenges</li>
       </ul>
     </section>
 
-    <section class="experience">
-      <h2>Experience</h2>
-      <p><strong>Creative Technologist (Personal Projects)</strong><br />
-      Designed interactive portfolio with cinematic transitions and modular routing using Three.js and Blender.</p>
-
-      <p><strong>Mentor & Organizer (UConn)</strong><br />
-      Led peer study groups, optimized collaborative workflows, and advised incoming students on course strategy and tech ethics.</p>
+    <section>
+      <h2>Volunteer Experience</h2>
+      <table>
+        <tr>
+          <th>Role</th>
+          <th>Description</th>
+          <th>Dates</th>
+        </tr>
+        <tr>
+          <td>Writing Collaborator</td>
+          <td>Assisted students with writing</td>
+          <td>Jan 2024 – Jun 2025</td>
+        </tr>
+        <tr>
+          <td>Peer Tutor</td>
+          <td>Tutored students of all ages and subjects</td>
+          <td>Oct 2023 – Jun 2025</td>
+        </tr>
+        <tr>
+          <td>Softball Assistant Coach</td>
+          <td>Helped coach Little League players</td>
+          <td>Apr 2021 – Aug 2024</td>
+        </tr>
+      </table>
     </section>
 
-    <section class="education">
-      <h2>Education</h2>
-      <p><strong>University of Connecticut</strong><br />
-      B.S. in Computer Science (in progress)<br />
-      Relevant coursework: CSE 1010, Calculus II, Robotics</p>
+    <section>
+      <h2>Campus & Community Involvement</h2>
+      <table>
+        <tr>
+          <th>Organization</th>
+          <th>Involvement</th>
+          <th>Dates</th>
+        </tr>
+        <tr>
+          <td>Running Club</td>
+          <td>Attended training, competed in 8k races</td>
+          <td>Sep 2025 – Present</td>
+        </tr>
+        <tr>
+          <td>Engineering LLC</td>
+          <td>Participated in learning community events</td>
+          <td>Sep 2025 – Present</td>
+        </tr>
+      </table>
+    </section>
+
+    <section>
+      <h2>Technical Skills & Languages</h2>
+      <ul>
+        <li><strong>Software:</strong> Python, JavaScript</li>
+        <li><strong>Computer Skills:</strong> Coding, AI, Microsoft Office Suite</li>
+        <li><strong>Languages:</strong> Intermediate French</li>
+      </ul>
     </section>
 
     <section class="download">
       <h2>Download</h2>
-      <p><a href="Alex_Resume.pdf" download>Download PDF Version</a></p>
+      <p><a href="Alexander Gau Work Resume.pdf" download>Download PDF Version</a></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Alex | Built with curiosity and code</p>
+    <p>&copy; 2025 Alexander Gau · Built with curiosity and code</p>
   </footer>
 </body>
 </html>
