--- a/resume.html
+++ b/resume.html
@@ -1,31 +1,174 @@
-<main>
-  <section class="resume-section">
-    <h2>Education</h2>
-    <!-- content -->
-  </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Resume | Alexander Gau</title>
+  <link rel="stylesheet" href="resume_style.css" />
+</head>
+<body>
+  <header>
+    <h1>Alexander Gau</h1>
+    <p>Rocky Hill, CT · 860-839-4425 · <a href="mailto:alexandergau07@gmail.com">alexandergau07@gmail.com</a> · <a href="https://www.linkedin.com/in/alexandergau/" target="_blank">LinkedIn</a></p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="about.html">About Me</a>
+      <a href="game.html">Game</a>
+    </nav>
+  </header>
 
-  <section class="resume-section">
-    <h2>Employment Experience</h2>
-    <!-- content -->
-  </section>
+  <main>
+    <!-- Education Section -->
+    <section class="resume-section education-chart">
+      <h2>Education</h2>
+      <div class="education-grid">
+        <div class="edu-card">
+          <h3>University of Connecticut</h3>
+          <p><strong>Degree:</strong> B.S. in Computer Science and Engineering</p>
+          <p><strong>Graduation:</strong> May 2029</p>
+          <p><strong>GPA:</strong> 3.45</p>
+          <p><strong>Coursework:</strong> Introduction to Python, Calculus II, Physics for Engineers</p>
+        </div>
+        <div class="edu-card">
+          <h3>Rocky Hill High School</h3>
+          <p><strong>Diploma:</strong> High School Diploma</p>
+          <p><strong>Graduation:</strong> June 2025</p>
+          <p><strong>GPA:</strong> 3.98</p>
+          <p><strong>Coursework:</strong> AP Calculus I, AP Statistics, AP CS Principles, UConn Physics I, Chem I & II, Discrete Math</p>
+          <p><strong>Honors:</strong> NHS, AP Scholar, CCC All-Academic, Elmira Book Award, CIAC State Champion, French NHS</p>
+        </div>
+      </div>
+    </section>
 
-  <section class="resume-section">
-    <h2>Volunteer Experience</h2>
-    <!-- content -->
-  </section>
+    <!-- Employment Section -->
+    <section class="resume-section employment-chart">
+      <h2>Employment Experience</h2>
+      <div class="employment-grid">
+        <div class="job-card">
+          <h3>Tennis Specialist</h3>
+          <p><strong>Organization:</strong> Logan Gauvin, Rocky Hill, CT</p>
+          <p><strong>Dates:</strong> June 2025 – Present</p>
+          <ul>
+            <li>Taught tennis to children ages 4–13, 8 hours daily</li>
+            <li>Created lesson plans and managed tennis facilities</li>
+            <li>Communicated with camp directors and guardians</li>
+          </ul>
+        </div>
+        <div class="job-card">
+          <h3>Camp Counselor</h3>
+          <p><strong>Organization:</strong> Logan Gauvin, Rocky Hill, CT</p>
+          <p><strong>Dates:</strong> June 2023 – September 2024</p>
+          <ul>
+            <li>Led groups of 20–30 campers ages 4–10</li>
+            <li>Managed daily activities and camper safety</li>
+            <li>Developed problem-solving skills through challenges</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-  <section class="resume-section">
-    <h2>Campus & Community Involvement</h2>
-    <!-- content -->
-  </section>
+    <!-- Volunteer Section -->
+    <section class="resume-section volunteer-chart">
+      <h2>Volunteer Experience</h2>
+      <div class="volunteer-table-wrapper">
+        <table class="volunteer-table">
+          <thead>
+            <tr>
+              <th>Role</th>
+              <th>Description</th>
+              <th>Dates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Writing Collaborator</td>
+              <td>Assisted students with writing assignments and feedback</td>
+              <td>Jan 2024 – Jun 2025</td>
+            </tr>
+            <tr>
+              <td>Peer Tutor</td>
+              <td>Tutored students across subjects and grade levels</td>
+              <td>Oct 2023 – Jun 2025</td>
+            </tr>
+            <tr>
+              <td>Softball Assistant Coach</td>
+              <td>Helped coach Little League players and assisted with practices</td>
+              <td>Apr 2021 – Aug 2024</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
 
-  <section class="resume-section">
-    <h2>Technical Skills & Languages</h2>
-    <!-- content -->
-  </section>
+    <!-- Campus Involvement Section -->
+    <section class="resume-section campus-chart">
+      <h2>Campus & Community Involvement</h2>
+      <div class="campus-table-wrapper">
+        <table class="campus-table">
+          <thead>
+            <tr>
+              <th>Organization</th>
+              <th>Involvement</th>
+              <th>Dates</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Running Club</td>
+              <td>Attended training practices and competed in 8k races</td>
+              <td>Sep 2025 – Present</td>
+            </tr>
+            <tr>
+              <td>Engineering LLC</td>
+              <td>Participated in learning community events and meetings</td>
+              <td>Sep 2025 – Present</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
 
-  <section class="resume-section download">
-    <h2>Download</h2>
-    <p><a href="Alexander Gau Work Resume.pdf" download>Download PDF Version</a></p>
-  </section>
-</main>
+    <!-- Skills Section -->
+    <section class="resume-section skills-chart">
+      <h2>Technical Skills & Languages</h2>
+      <div class="skills-grid">
+        <div class="skill-group">
+          <h3>Software</h3>
+          <ul class="skill-tags">
+            <li>Python</li>
+            <li>JavaScript</li>
+          </ul>
+        </div>
+        <div class="skill-group">
+          <h3>Computer Skills</h3>
+          <ul class="skill-tags">
+            <li>Coding</li>
+            <li>AI</li>
+            <li>Microsoft Office Suite</li>
+          </ul>
+        </div>
+        <div class="skill-group">
+          <h3>Languages</h3>
+          <ul class="skill-tags">
+            <li>Intermediate French</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Download Section -->
+    <section class="resume-section download-card">
+      <h2>Download My Resume</h2>
+      <div class="download-box">
+        <p>Want a copy of my resume? Grab the PDF version below:</p>
+        <a href="Alexander Gau Work Resume.pdf" download class="download-button">📄 Download Resume (PDF)</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Alexander Gau · Built with curiosity and code</p>
+  </footer>
+</body>
+</html>
