--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,7 @@
       <a href="game.html">Game</a>
     </nav>
     <div class="theme-toggle">
-      <label>
-        <input type="checkbox" id="darkModeToggle" />
-        🌙 Dark Mode
-      </label>
+      <button id="darkModeToggle" class="toggle-button">🌙 Toggle Dark Mode</button>
     </div>
   </header>
 
