--- a/resume.html
+++ b/resume.html
@@ -191,8 +191,8 @@
 
   <!-- Dark Mode Toggle Script -->
   <script>
-    const toggle = document.getElementById('darkModeToggle');
-    toggle.addEventListener('change', () => {
+    const toggleButton = document.getElementById('darkModeToggle');
+    toggleButton.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
     });
   </script>
