--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
       <div class="education-grid">
         <div class="edu-card">
           <h3>University of Connecticut</h3>
-          <p><strong>Degree:</strong> B.S. in Computer Science and Engineering</p>
+          <p><strong>Degree:</strong> B.S.E. in Computer Science and Engineering</p>
           <p><strong>Graduation:</strong> May 2029</p>
           <p><strong>GPA:</strong> 3.45</p>
           <p><strong>Coursework:</strong> Introduction to Python, Calculus II, Physics for Engineers</p>
