--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
     <section class="resume-section fun-facts">
       <h2>🎉 Fun Facts</h2>
       <div class="facts-grid">
-        <div class="fact-card">🏃 I run 8k races with UConn’s club team</div>
+        <div class="fact-card">🏃 I run 8k races with UConn’s RunUC club team</div>
         <div class="fact-card">🎮 I built a playable game for my portfolio</div>
         <div class="fact-card">🧠 I love debugging and mentoring peers</div>
-        <div class="fact-card">🎥 I design cinematic camera transitions in Three.js</div>
+        <div class="fact-card">🎥 This website was made by my skills and Microsoft Copilot to teach me new skills</div>
       </div>
     </section>
 
