--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <!-- Who I Am -->
     <section class="resume-section">
       <h2>👋 Who I Am</h2>
-      <p>Hi, I’m <strong>Alexander Gau</strong> — a Computer Science and Engineering student at the University of Connecticut. I’m passionate about building immersive, interactive experiences that blend code, design, and storytelling. Whether I’m debugging a Python project, animating a 3D homepage, or mentoring peers, I bring curiosity, clarity, and creativity to everything I do.</p>
+      <p>Hi, I’m <strong>Alexander Gau</strong>! I am currently a Computer Science and Engineering student at the University of Connecticut. I’m passionate about coding in both my classes and for my own amusment, much like this website. Whether I’m debugging a Python project, animating a 3D homepage, or mentoring peers, I bring creativity and an open mind to everything I do.</p>
     </section>
 
     <!-- Fun Facts -->
@@ -55,7 +55,7 @@
     <!-- Contact -->
     <section class="resume-section">
       <h2>📫 Let’s Connect</h2>
-      <p>Want to collaborate, chat about tech, or just say hi? Reach out!</p>
+      <p>Want to collaborate, learn more about me, or just start a conversation? Reach out!</p>
       <ul>
         <li>Email: <a href="mailto:alexandergau07@gmail.com">alexandergau07@gmail.com</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/alexandergau/" target="_blank">linkedin.com/in/alexandergau</a></li>
