--- a/about.html
+++ b/about.html
@@ -22,25 +22,27 @@
   </header>
 
   <main>
-    <!-- Profile Photo -->
-    <section class="resume-section profile-photo">
-      <img src="your-photo.jpg" alt="Alexander Gau" class="profile-img" />
-    </section>
-
-    <!-- Who I Am -->
-    <section class="resume-section">
-      <h2>👋 Who I Am</h2>
-      <p>Hi, I’m <strong>Alexander Gau</strong>! I am currently a Computer Science and Engineering student at the University of Connecticut. I’m passionate about coding in both my classes and for my own amusment, much like this website. Whether I’m debugging a Python project, animating a 3D homepage, or mentoring peers, I bring creativity and an open mind to everything I do.</p>
+    <!-- Who I Am with Photo -->
+    <section class="resume-section about-intro">
+      <div class="intro-grid">
+        <div class="intro-photo">
+          <img src="your-photo.jpg" alt="Alexander Gau" class="profile-img" />
+        </div>
+        <div class="intro-text">
+          <h2>👋 Who I Am</h2>
+          <p>Hi, I’m <strong>Alexander Gau</strong> — a Computer Science and Engineering student at the University of Connecticut. I’m passionate about building immersive, interactive experiences that blend code, design, and storytelling. Whether I’m debugging a Python project, animating a 3D homepage, or mentoring peers, I bring curiosity, clarity, and creativity to everything I do.</p>
+        </div>
+      </div>
     </section>
 
     <!-- Fun Facts -->
     <section class="resume-section fun-facts">
       <h2>🎉 Fun Facts</h2>
       <div class="facts-grid">
-        <div class="fact-card">🏃 I run 8k races with UConn’s RunUC club team</div>
+        <div class="fact-card">🏃 I run 8k races with UConn’s club team</div>
         <div class="fact-card">🎮 I built a playable game for my portfolio</div>
         <div class="fact-card">🧠 I love debugging and mentoring peers</div>
-        <div class="fact-card">🎥 This website was made by my skills and Microsoft Copilot to teach me new skills</div>
+        <div class="fact-card">🎥 I design cinematic camera transitions in Three.js</div>
       </div>
     </section>
 
@@ -48,14 +50,14 @@
     <section class="resume-section now-playing">
       <h2>🎵 Now Playing</h2>
       <div class="music-widget">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1yxSLGMDHlW21z4YXirZDS?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/YOUR_TRACK_ID?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
     </section>
 
     <!-- Contact -->
     <section class="resume-section">
       <h2>📫 Let’s Connect</h2>
-      <p>Want to collaborate, learn more about me, or just start a conversation? Reach out!</p>
+      <p>Want to collaborate, chat about tech, or just say hi? Reach out!</p>
       <ul>
         <li>Email: <a href="mailto:alexandergau07@gmail.com">alexandergau07@gmail.com</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/alexandergau/" target="_blank">linkedin.com/in/alexandergau</a></li>
