--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Alexander Gau · Built with curiosity and code</p>
+    <p>&copy; 2025 Alexander Gau</p>
   </footer>
 
   <!-- Section Animation Script -->
