--- a/resume.html
+++ b/resume.html
@@ -171,7 +171,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Alexander Gau · Built with curiosity and code</p>
+    <p>Thanks for visiting!</p>
   </footer>
 
   <!-- Section Animation Script -->
