--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="fact-card">🏃 I run 8k races with UConn’s club team</div>
         <div class="fact-card">🎮 I built a playable game for my portfolio</div>
         <div class="fact-card">🧠 I love debugging and mentoring peers</div>
-        <div class="fact-card">🎥 I design cinematic camera transitions in Three.js</div>
+        <div class="fact-card">🎥 This website was made by me along side Copilot to teach me new coding and structure</div>
       </div>
     </section>
 
