--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>About Me</h1>
-    <p>Get to know who I am, what I value, and what drives me.</p>
+    <p>Get to know who I am, what I value, and most importantly my music taste</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
