--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         </div>
         <div class="intro-text">
           <h2>👋 Who I Am</h2>
-          <p>Hi, I’m <strong>Alexander Gau</strong> — a Computer Science and Engineering student at the University of Connecticut. I’m passionate about building immersive, interactive experiences that blend code, design, and storytelling. Whether I’m debugging a Python project, animating a 3D homepage, or mentoring peers, I bring curiosity, clarity, and creativity to everything I do.</p>
+          <p>Hi, I’m <strong>Alexander Gau</strong>! I am a Computer Science and Engineering student at the University of Connecticut. As an aspiring coder, I’m passionate about coding for my classes and for my own amusement, much like this website. Whether I’m debugging a Python project, attempting to work in blender, or helping peers, I bring creativity and an open mind to everything I do.</p>
         </div>
       </div>
     </section>
