--- a/projects.html
+++ b/projects.html
@@ -23,30 +23,20 @@
 
   <main>
     <section class="projects-section">
-      <h2>🧠 Featured Projects</h2>
+      <h2>Featured Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <h3>🎮 Portfolio Game</h3>
+          <h3>Portfolio Game</h3>
           <p>A playable game built with JavaScript and HTML5 canvas. Designed to showcase creativity and interactivity.</p>
           <a href="game.html" class="project-link">Play Game →</a>
         </div>
 
         <div class="project-card">
-          <h3>🌐 Personal Website</h3>
+          <h3>Personal Website</h3>
           <p>Modular portfolio site built with HTML, CSS, and Three.js. Features cinematic camera transitions and interactive routing.</p>
           <a href="index.html" class="project-link">Visit Homepage →</a>
         </div>
-
-        <div class="project-card">
-          <h3>🤖 Robotics Debugger</h3>
-          <p>Python-based troubleshooting tool for robotics coursework. Focused on clarity, formatting, and autograder compatibility.</p>
-          <a href="#" class="project-link">View Code (Coming Soon)</a>
-        </div>
-
-        <div class="project-card">
-          <h3>📊 Resume Builder</h3>
-          <p>Styled resume page with downloadable PDF, section animations, and dark mode toggle. Built for clarity and impact.</p>
-          <a href="resume.html" class="project-link">View Resume →</a>
+          <h3>More coming soon!</h3>
         </div>
       </div>
     </section>
