--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,7 @@
           <p>Modular portfolio site built with HTML, CSS, and Three.js. Features cinematic camera transitions and interactive routing.</p>
           <a href="index.html" class="project-link">Visit Homepage →</a>
         </div>
+        <div class="project-card">
           <h3>More coming soon!</h3>
         </div>
       </div>
