--- a/game.html
+++ b/game.html
@@ -45,8 +45,8 @@
   </main>
 
   <!-- Sound Effects -->
-  <audio id="hitSound" src="hit.mp3" preload="auto"></audio>
-  <audio id="powerupSound" src="powerup.mp3" preload="auto"></audio>
+  <!-- <audio id="hitSound" src="hit.mp3" preload="auto"></audio>
+  <audio id="powerupSound" src="powerup.mp3" preload="auto"></audio> -->
 
   <footer>
     <p>Thanks for visiting</p>
