--- a/game.html
+++ b/game.html
@@ -44,6 +44,9 @@
     </section>
   </main>
 
+  <!-- Sound Effects -->
+  <!--<audio id="hitSound" src="hit.mp3" preload="auto"></audio>
+  <audio id="powerupSound" src="powerup.mp3" preload="auto"></audio>  -->
 
   <footer>
     <p>&copy; 2025 Alexander Gau · Built with curiosity and code</p>
