--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🎮 Dodge the Blocks</h1>
+    <h1>Dodge the Blocks</h1>
     <p>Play the game I built to showcase creativity, logic, and fun.</p>
     <nav>
       <a href="index.html">Home</a>
@@ -23,14 +23,14 @@
 
   <!-- Start Screen -->
   <div id="startScreen" class="overlay">
-    <h2>🎮 Dodge the Blocks</h2>
+    <h2>Dodge the Blocks</h2>
     <p>Use arrow keys or WASD to move. Avoid falling blocks. Collect power-ups. Survive as long as you can!</p>
     <button id="startButton">Start Game</button>
   </div>
 
   <!-- Game Over Screen -->
   <div id="gameOverScreen" class="overlay" style="display: none;">
-    <h2>💀 Game Over</h2>
+    <h2>Game Over</h2>
     <p id="finalScore">Your Score: 0</p>
     <button id="restartButton">Restart</button>
   </div>
