--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
   <audio id="powerupSound" src="powerup.mp3" preload="auto"></audio>  -->
 
   <footer>
-    <p>&copy; 2025 Alexander Gau · Built with curiosity and code</p>
+    <p>Thanks for visiting!</p>
   </footer>
 
   <!-- Dark Mode Toggle Script -->
