--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Dodge the Blocks</h1>
-    <p>Play the game I built to showcase creativity, logic, and fun.</p>
+    <p>Play the game I built for fun</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
