--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
     <section class="resume-section fun-facts">
       <h2>🎉 Fun Facts</h2>
       <div class="facts-grid">
-        <div class="fact-card">🏃 I run 8k races with UConn’s club team</div>
+        <div class="fact-card">🏃 I run 8k races with UConn’s club team RunUC</div>
         <div class="fact-card">🎮 I built a playable game for my portfolio</div>
-        <div class="fact-card">🧠 I love debugging and mentoring peers</div>
+        <div class="fact-card">🧠 I love debugging and helping peers with code</div>
         <div class="fact-card">🎥 This website was made by me along side Copilot to teach me new coding and structure</div>
       </div>
     </section>
