--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Alexander Gau</h1>
-    <p>Rocky Hill, CT · 860-839-4425 · <a href="mailto:alexandergau07@gmail.com">alexandergau07@gmail.com</a> · <a href="https://www.linkedin.com/in/alexandergau/" target="_blank">LinkedIn</a></p>
+    <p><a href="mailto:alexandergau07@gmail.com">alexandergau07@gmail.com</a> · <a href="https://www.linkedin.com/in/alexandergau/" target="_blank">LinkedIn</a></p>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
